--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,11 @@
 {
+  "arrowParens": "always",
+  "semi": false,
+  "trailingComma": "none",
   "tabWidth": 2,
+  "endOfLine": "auto",
+  "useTabs": false,
   "singleQuote": true,
-  "printWidth": 80,
-  "bracketSpacing": false,
-  "semi": false
+  "printWidth": 120,
+  "jsxSingleQuote": true
 }
