--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "18.0.11",
     "eslint": "^8.37.0",
     "eslint-config-next": "13.2.4",
+    "github-syntax-dark": "0.5.0",
+    "html-react-parser": "3.0.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
